deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartlogistics
  labels:
    app.kubernetes.io/name: smartlogistics
    app.kubernetes.io/part-of: smartlogistics
